networkpolicies/DEV-cluster/test-variant-c-ns/custom-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: custom-policy
  namespace: test-variant-c-ns
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: allowed-namespace
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: custom-app
  policyTypes:
  - Ingress
