networkpolicies/DEV-cluster/test-variant-c-ns/test-variant-c-ns-allow-prometheus-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.permission-binder.io/template: allow-prometheus-metrics.yaml
    network-policy.permission-binder.io/template-path: networkpolicies/templates/allow-prometheus-metrics.yaml
    network-policy.permission-binder.io/template-version: HEAD
  name: test-variant-c-ns-allow-prometheus-metrics
  namespace: test-variant-c-ns
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: openshift-monitoring
    - namespaceSelector:
        matchLabels:
          name: openshift-user-workload-monitoring
  podSelector: {}
  policyTypes:
  - Ingress
