networkpolicies/DEV-cluster/test-variant-c-ns/test-variant-c-ns-allow-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.permission-binder.io/template: allow-same-namespace.yaml
    network-policy.permission-binder.io/template-path: networkpolicies/templates/allow-same-namespace.yaml
    network-policy.permission-binder.io/template-version: HEAD
  name: test-variant-c-ns-allow-same-namespace
  namespace: test-variant-c-ns
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
